--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.14.1",
+    "@mui/material": "5.11.15",
     "loader-utils": "3.2.1",
-    "mui": "0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
