--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1"
   },
