--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "6.10.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.6.2"
   },
   "devDependencies": {
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-show-more-text": "^1.4.2",
     "typescript": "4.4.2"
   },
   "scripts": {
