--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@emotion/styled": "11.10.6",
     "@mui/icons-material": "5.14.1",
     "@mui/material": "5.11.15",
+    "@mui/system": "^5.8.0",
+    "@mui/x-date-pickers": "^6.15.0",
+    "dayjs": "^1.11.10",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
