--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "5.14.1",
-    "@mui/material": "5.11.15",
+    "@mui/lab": "^5.0.0-alpha.147",
+    "@mui/material": "^5.11.15",
     "@mui/system": "^5.8.0",
     "@mui/x-date-pickers": "^6.15.0",
     "dayjs": "^1.11.10",
@@ -24,7 +25,6 @@
   "devDependencies": {
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@types/react-show-more-text": "^1.4.2",
     "typescript": "4.4.2"
   },
   "scripts": {
