--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "sample-site",
+  "name": "vite-react-ts-sm-website",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.6",
@@ -15,28 +23,31 @@
     "@mui/x-date-pickers": "^6.15.0",
     "dayjs": "^1.11.10",
     "loader-utils": "3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "6.10.0",
-    "react-scripts": "5.0.1",
     "react-show-more-text": "^1.6.2"
   },
   "devDependencies": {
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "typescript": "4.4.2"
+    "@eslint/js": "^9.9.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2",
+    "vite-plugin-svgr": "^4.3.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
